--- a/package.json
+++ b/package.json
@@ -1,19 +1,43 @@
 {
-    "name": "practice_playwright",
+    "name": "testautomation_playwright",
     "version": "1.0.0",
-    "description": "",
+    "description": "Playwright Framework with Typescript",
     "main": "index.js",
-    "scripts": {},
-    "keywords": [],
+    "scripts": {
+        "test": "npx playwright test",
+        "test:single": "npx playwright test Login.test.ts --project=Chrome",
+        "test:parallel": "npx playwright test --grep @Smoke --project=Chrome",
+        "test:smoke": "npx playwright test --grep @Smoke --workers=1 --project=Chrome",
+        "test:api": "npx playwright test --grep @API --workers=1 --project=Chrome",
+        "allureReport": "allure serve",
+        "lighthouse": "node tests/lighthouse/Lighthouse.js"
+    },
     "author": "Ismail Elshafeiy",
     "license": "ISC",
-    "devDependencies": {
-        "@playwright/test": "^1.29.2",
-        "allure-playwright": "^2.0.0-beta.19"
-    },
     "dependencies": {
-        "allure": "^0.0.0",
+        "@playwright/test": "^1.32.3",
+        "@types/adm-zip": "^0.5.0",
+        "@types/crypto-js": "^4.1.1",
+        "@typescript-eslint/eslint-plugin": "^5.59.0",
+        "@typescript-eslint/parser": "^5.59.0",
+        "adm-zip": "^0.5.10",
+        "allure-commandline": "^2.22.1",
+        "allure-playwright": "^2.1.0",
+        "crypto-js": "^4.1.1",
+        "eslint": "^8.38.0",
+        "eslint-plugin-import": "^2.27.5",
+        "exceljs": "^4.3.0",
+        "i": "^0.3.7",
+        "lighthouse": "^9.6.8",
         "monocart-reporter": "^1.0.7",
-        "playwright": "^1.27.1"
+        "npm": "^9.6.4",
+        "pdfjs-dist-es5": "^2.13.216",
+        "pg": "^8.10.0",
+        "typescript": "^5.0.4",
+        "winston": "^3.8.2"
+    },
+    "devDependencies": {
+        "cross-env": "^7.0.3"
     }
+    
 }
