--- a/package.json
+++ b/package.json
@@ -5,24 +5,24 @@
     "main": "index.js",
     "scripts": {
         "test": "npx playwright test",
-        "test:single": "npx playwright test Login.test.ts --project=Chrome",
-        "test:parallel": "npx playwright test --grep @Smoke --project=Chrome",
+        "clean": "rimraf allure-report && rimraf report/allure-results && rimraf test-results",
+        "test:login": "npx playwright test Login.test.ts --project=Chrome",
         "test:smoke": "npx playwright test --grep @Smoke --workers=1 --project=Chrome",
         "test:api": "npx playwright test --grep @API --workers=1 --project=Chrome",
-        "allureReport": "allure serve",
+        "allure:report": "npx allure generate ./reports/allure-results && allure open",
+        "test:parallel": "npx playwright test --grep @Smoke --project=Chrome",
+        "test:reporter": "npm run clean && playwright test --headed --reporter=allure-playwright,line,./reports/allure-results",
         "lighthouse": "node tests/lighthouse/Lighthouse.js"
     },
     "author": "Ismail Elshafeiy",
     "license": "ISC",
     "dependencies": {
-        "@playwright/test": "^1.32.3",
+        "@playwright/test": "^1.35.0",
         "@types/adm-zip": "^0.5.0",
         "@types/crypto-js": "^4.1.1",
         "@typescript-eslint/eslint-plugin": "^5.59.0",
         "@typescript-eslint/parser": "^5.59.0",
         "adm-zip": "^0.5.10",
-        "allure-commandline": "^2.22.1",
-        "allure-playwright": "^2.1.0",
         "crypto-js": "^4.1.1",
         "eslint": "^8.38.0",
         "eslint-plugin-import": "^2.27.5",
@@ -33,11 +33,15 @@
         "npm": "^9.6.4",
         "pdfjs-dist-es5": "^2.13.216",
         "pg": "^8.10.0",
+        "rimraf": "^5.0.1",
         "typescript": "^5.0.4",
         "winston": "^3.8.2"
     },
     "devDependencies": {
-        "cross-env": "^7.0.3"
+        "cross-env": "^7.0.3",
+        "allure-commandline": "^2.22.1",
+        "allure-playwright": "^2.4.0"
     }
-    
+
 }
+
