--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+
 /allure-report/
 /node_modules/
 /reports/
@@ -6,3 +7,4 @@
 /playwright/.cache/
 /allure-results/
 storageState.json
+/playwright-report.zip
