--- a/package.json
+++ b/package.json
@@ -3,27 +3,38 @@
     "version": "1.0.0",
     "description": "Playwright Framework with Typescript",
     "main": "index.js",
+    "author": "Ismail Elshafeiy",
+    "license": "ISC",
     "scripts": {
+        "inspector": "npx playwright codegen playwright.dev",
+        "stg": "npx cross-env ENV=stg",
+        "prod": "npx cross-env ENV=prod",
         "test": "npx playwright test",
-        "clean": "rimraf allure-report && rimraf report/allure-results && rimraf test-results",
+        "test:stg": "npx cross-env ENV=stg playwright test",
+        "test:prod": "npx cross-env ENV=prod playwright test",
+        "clean": "rimraf reports/allure-results && rimraf test-results",
         "test:login": "npx playwright test Login.test.ts --project=Chrome",
         "test:smoke": "npx playwright test --grep @Smoke --workers=1 --project=Chrome",
         "test:api": "npx playwright test --grep @API --workers=1 --project=Chrome",
-        "allure:report": "npx allure generate ./reports/allure-results && allure open",
-        "test:parallel": "npx playwright test --grep @Smoke --project=Chrome",
+        "allure:report": "allure serve reports/allure-results",
         "test:reporter": "npm run clean && playwright test --headed --reporter=allure-playwright,line,./reports/allure-results",
-        "lighthouse": "node tests/lighthouse/Lighthouse.js"
+        "lighthouse": "node tests/Lighthouse.js"
     },
-    "author": "Ismail Elshafeiy",
-    "license": "ISC",
     "dependencies": {
-        "@playwright/test": "^1.35.0",
+        "@applitools/eyes-playwright": "^1.20.0",
+        "@faker-js/faker": "^7.6.0",
+        "@playwright/test": "^1.38.1",
         "@types/adm-zip": "^0.5.0",
         "@types/crypto-js": "^4.1.1",
+        "@types/node": "^20.7.0",
         "@typescript-eslint/eslint-plugin": "^5.59.0",
         "@typescript-eslint/parser": "^5.59.0",
         "adm-zip": "^0.5.10",
+        "allure-commandline": "^2.22.1",
+        "allure-playwright": "^2.4.0",
+        "cross-env": "^7.0.3",
         "crypto-js": "^4.1.1",
+        "csv-parse": "^5.5.0",
         "eslint": "^8.38.0",
         "eslint-plugin-import": "^2.27.5",
         "exceljs": "^4.3.0",
@@ -33,15 +44,11 @@
         "npm": "^9.6.4",
         "pdfjs-dist-es5": "^2.13.216",
         "pg": "^8.10.0",
+        "playwright-lighthouse": "2.2.2",
         "rimraf": "^5.0.1",
-        "typescript": "^5.0.4",
         "winston": "^3.8.2"
     },
     "devDependencies": {
-        "cross-env": "^7.0.3",
-        "allure-commandline": "^2.22.1",
-        "allure-playwright": "^2.4.0"
+        "typescript": "^5.2.2"
     }
-
 }
-
