--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@types/node": "^20.7.0",
         "@typescript-eslint/eslint-plugin": "^5.59.0",
         "@typescript-eslint/parser": "^5.59.0",
+        "@wdio/allure-reporter": "^8.32.4",
         "adm-zip": "^0.5.10",
         "allure-commandline": "^2.22.1",
         "allure-playwright": "^2.4.0",
@@ -48,7 +49,9 @@
         "winston": "^3.8.2"
     },
     "devDependencies": {
-        "@playwright/test": "^1.41.2",
+        "@playwright/test": "^1.48.1",
+        "@wdio/cli": "^8.32.4",
         "typescript": "^5.2.2"
-    }
+    },
+    "packageManager": "yarn@4.5.0"
 }
