--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -30,9 +30,25 @@ jobs:
     - name: Run Playwright tests
       run: xvfb-run npx playwright test  # Run the tests with xvfb
 
+    - name: Deploy Playwright Report to GitHub Pages
+      if: ${{ always() }}
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: reports/playwright-report
+
     - uses: actions/upload-artifact@v4
       if: ${{ !cancelled() }}
       with:
         name: playwright-report
         path: reports/playwright-report/
         retention-days: 30
+
+    - name: Notify Slack
+      if: always()  # Notify regardless of success or failure
+      uses: rtCamp/action-slack-notify@v2
+      env:
+        SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_URL }}
+      with:
+        status: ${{ job.status }}
+        job_name: Playwright Tests
