--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -42,7 +42,7 @@ jobs:
       uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: reports/playwright-report
+        publish_dir: reports/playwright-report/index.html
 
     - name: Notify Slack
       if: always()  # Notify regardless of success or failure
