--- a/package.json
+++ b/package.json
@@ -22,15 +22,11 @@
     },
     "dependencies": {
         "@applitools/eyes-playwright": "^1.20.0",
-        "@faker-js/faker": "^7.6.0",
         "@types/adm-zip": "^0.5.0",
         "@types/crypto-js": "^4.1.1",
         "@typescript-eslint/eslint-plugin": "^5.59.0",
         "@typescript-eslint/parser": "^5.59.0",
-        "@wdio/allure-reporter": "^8.32.4",
         "adm-zip": "^0.5.10",
-        "allure-commandline": "^2.22.1",
-        "allure-playwright": "^2.4.0",
         "cross-env": "^7.0.3",
         "crypto-js": "^4.1.1",
         "csv-parse": "^5.5.0",
@@ -49,11 +45,16 @@
         "winston": "^3.8.2"
     },
     "devDependencies": {
+        "@faker-js/faker": "^10.0.0",
         "@playwright/test": "^1.55.0",
         "@reportportal/agent-js-playwright": "^5.2.2",
+        "@types/faker": "^6.6.8",
         "@types/node": "^24.3.2",
         "@wdio/cli": "^9.3.1",
-        "typescript": "^5.2.2"
+        "allure-commandline": "^2.22.1",
+        "allure-playwright": "^2.4.0",
+        "prettier": "^2.6.2",
+        "typescript": "^5.3.0"
     },
     "packageManager": "yarn@4.5.0"
 }
